--- a/index.html
+++ b/index.html
@@ -163,9 +163,7 @@
 							</header>
 
 							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							Elementum sem parturient nulla quam placerat viverraElementum sem parturient nulla quam placerat viverra.</p>
 
 							<form method="post" action="#">
 								<div class="row">
