--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 					</header>
 					<div class="box">
 						<form method="post" action="https://formsubmit.co/b5c5d4105521f7d66cf43b1c47f72841">
+							<input type="hidden" name="_next" value="https://cjpenning.github.io/delaneyharp/">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
