--- a/index.html
+++ b/index.html
@@ -70,38 +70,48 @@
 
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
-				<div class="content">
-					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
-					</header>
+    <div class="content">
+        <header>
+            <h2>My Music</h2>
+            <p>Here are some of my harp performances. Click on a thumbnail to watch the video on YouTube.</p>
+        </header>
 
-					<!-- Gallery  -->
-						<div class="gallery">
-							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
-							</article>
-						</div>
+        <!-- Video Gallery -->
+        <div class="gallery">
+            <article class="from-left">
+                <a href="https://www.youtube.com/watch?v=MXQEdTDCdAs" target="_blank" class="image fit">
+                    <img src="images/thumbs/01.jpg" title="Video 1" alt="Thumbnail for Video 1" />
+                </a>
+            </article>
+            <article class="from-right">
+                <a href="https://www.youtube.com/watch?v=sPB0hfzQ_oE" target="_blank" class="image fit">
+                    <img src="images/thumbs/02.jpg" title="Video 2" alt="Thumbnail for Video 2" />
+                </a>
+            </article>
+            <article class="from-left">
+                <a href="https://www.youtube.com/watch?v=N_P95Epi21w" target="_blank" class="image fit">
+                    <img src="images/thumbs/03.jpg" title="Video 3" alt="Thumbnail for Video 3" />
+                </a>
+            </article>
+            <article class="from-right">
+                <a href="https://www.youtube.com/watch?v=KR8uEI70iZg" target="_blank" class="image fit">
+                    <img src="images/thumbs/04.jpg" title="Video 4" alt="Thumbnail for Video 4" />
+                </a>
+            </article>
+            <article class="from-left">
+                <a href="https://www.youtube.com/watch?v=W8pw_JUKzDo" target="_blank" class="image fit">
+                    <img src="images/thumbs/05.jpg" title="Video 5" alt="Thumbnail for Video 5" />
+                </a>
+            </article>
+            <article class="from-right">
+                <a href="https://www.youtube.com/watch?v=TkgIhwAzDAc" target="_blank" class="image fit">
+                    <img src="images/thumbs/06.jpg" title="Video 6" alt="Thumbnail for Video 6" />
+                </a>
+            </article>
+        </div>
+    </div>
+</section>
 
-				</div>
-			</section>
 
 		<!-- Contact -->
 			<section id="contact" class="main style3 secondary">
