--- a/index.html
+++ b/index.html
@@ -67,7 +67,30 @@
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
+<style>
+.video-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    gap: 20px; /* Spacing between videos */
+    max-width: 900px; /* Limit width for better layout */
+    margin: auto; /* Center the grid */
+}
 
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+</style>
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
     <div class="content">
@@ -77,40 +100,28 @@
         </header>
 
         <!-- Video Gallery -->
-        <div class="gallery">
-            <article class="from-left">
-                <a href="https://www.youtube.com/watch?v=MXQEdTDCdAs" target="_blank" class="image fit">
-                    <img src="images/thumbs/01.jpg" title="Video 1" alt="Thumbnail for Video 1" />
-                </a>
-            </article>
-            <article class="from-right">
-                <a href="https://www.youtube.com/watch?v=sPB0hfzQ_oE" target="_blank" class="image fit">
-                    <img src="images/thumbs/02.jpg" title="Video 2" alt="Thumbnail for Video 2" />
-                </a>
-            </article>
-            <article class="from-left">
-                <a href="https://www.youtube.com/watch?v=N_P95Epi21w" target="_blank" class="image fit">
-                    <img src="images/thumbs/03.jpg" title="Video 3" alt="Thumbnail for Video 3" />
-                </a>
-            </article>
-            <article class="from-right">
-                <a href="https://www.youtube.com/watch?v=KR8uEI70iZg" target="_blank" class="image fit">
-                    <img src="images/thumbs/04.jpg" title="Video 4" alt="Thumbnail for Video 4" />
-                </a>
-            </article>
-            <article class="from-left">
-                <a href="https://www.youtube.com/watch?v=W8pw_JUKzDo" target="_blank" class="image fit">
-                    <img src="images/thumbs/05.jpg" title="Video 5" alt="Thumbnail for Video 5" />
-                </a>
-            </article>
-            <article class="from-right">
-                <a href="https://www.youtube.com/watch?v=TkgIhwAzDAc" target="_blank" class="image fit">
-                    <img src="images/thumbs/06.jpg" title="Video 6" alt="Thumbnail for Video 6" />
-                </a>
-            </article>
+         <div class="video-grid">
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/MXQEdTDCdAs" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/sPB0hfzQ_oE" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/N_P95Epi21w" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/KR8uEI70iZg" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/W8pw_JUKzDo" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/TkgIhwAzDAc" allowfullscreen></iframe>
         </div>
     </div>
 </section>
+ 
 
 
 		<!-- Contact -->
