--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<h1>Taryn Delaney Harp</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Intro</a></li>
+						<li><a href="#intro">Home</a></li>
 						<li><a href="#one">What I Do</a></li>
 						<li><a href="#two">About Me</a></li>
 						<li><a href="#work">My Music</a></li>
@@ -32,10 +32,9 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Taryn Delaney Harp</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>Live harp music for events in <strong>Edmonton, Alberta</strong> and area.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -128,8 +127,10 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
+						<h2>Email:</h2>
+						<p>taryndelaneyharp@gmail.com</p>
 						<h2>Say Hello.</h2>
-						<p>Send me a message and I will contact you shortly.</p>
+						<p>Send me a message and I will contact you shortly</p>
 					</header>
 					<div class="box">
 						<form method="post" action="https://formsubmit.co/b5c5d4105521f7d66cf43b1c47f72841">
@@ -153,17 +154,14 @@
 				<!-- Icons -->
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
 					</ul>
 
 				<!-- Menu -->
-					<ul class="menu">
+					
+					<!--<ul class="menu">
 						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-					</ul>
+					</ul>-->
 
 			</footer>
 
