--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Taryn Delaney Harp</h2>
+						<h2>Taryn Delaney, Harpist</h2>
 					</header>
 					<p>Live harp music for events in <strong>Edmonton, Alberta</strong> and area.</p>
 					<footer>
