--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<nav>
 					<ul>
 						<li><a href="#intro">Home</a></li>
-						<li><a href="#one">What I Do</a></li>
+						<li><a href="#one">Services</a></li>
 						<li><a href="#two">About Me</a></li>
 						<li><a href="#work">My Music</a></li>
 						<li><a href="#contact">Contact</a></li>
@@ -45,11 +45,23 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>Services/h2>
 					</header>
 					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					id varius justo euismod in. Curabitur egestas consectetur magna.
+					
+					<ul>
+    <li>Anniversaries and birthday parties</li>
+    <li>Baby showers</li>
+    <li>Church Events</li>
+    <li>Corporate events & fundraisers</li>
+    <li>Funerals</li>
+    <li>Gala Event</li>
+</ul>
+					</p>
+
+
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
