--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <li>Church Events</li>
     <li>Corporate events & fundraisers</li>
     <li>Funerals</li>
-    <li>Gala Event</li>
+    <li>Gala Events</li>
 </ul>
 					</p>
 
