--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					
 					<ul>
     <li>Anniversaries and birthday parties</li>
-    <li>Baby showers</li>
+    <li>Seniors and Supportive Living Residences Events </li>
     <li>Church Events</li>
     <li>Corporate events & fundraisers</li>
     <li>Funerals</li>
