--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 						<li><a href="#one">Services</a></li>
 						<li><a href="#two">About Me</a></li>
 						<li><a href="#work">My Music</a></li>
+						<li><a href="#repertoire">Repertoire</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -101,6 +102,31 @@
     width: 100%;
     height: 100%;
 }
+
+	        .categories {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
+        }
+        .category {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+            width: 30%;
+        }
+        .category h3 {
+            border-bottom: 2px solid #c4a484;
+            padding-bottom: 10px;
+        }
+        .category ul {
+            list-style: none;
+            padding: 0;
+        }
+        .category ul li {
+            padding: 5px 0;
+        }
 </style>
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
@@ -132,7 +158,54 @@
         </div>
     </div>
 </section>
- 
+
+		<!-- Work -->
+			<section id="repertoire" class="main style3 primary">
+    <div class="content">
+        <header>
+            <h2>Repertoire</h2>
+            <p>Here are some of my harp music options.</p>
+        </header>
+
+	    <div class="categories">
+            <div class="category">
+                <h3>Classical</h3>
+                <p>Classical selections, particularly the Baroque, are well suited for the harp.</p>
+                <ul>
+                    <li>Canon in D (Pachelbel)</li>
+                    <li>Arioso (Bach)</li>
+                    <li>Air on a G String (Bach)</li>
+                    <li>Prelude (Bach)</li>
+                    <li>Spring (Vivaldi)</li>
+                    <li>Jesu Joy of Man’s Desiring (Bach)</li>
+                </ul>
+            </div>
+            <div class="category">
+                <h3>Celtic</h3>
+                <p>The harp is a traditional instrument of Ireland and Wales. Many beautiful songs have been written for the harp.</p>
+                <ul>
+                    <li>My Love is Like Red Red Rose</li>
+                    <li>Sally Gardens / The Maids of Morne Shore</li>
+                    <li>Eleanor Plunkett</li>
+                    <li>Blind Mary</li>
+                </ul>
+            </div>
+            <div class="category">
+                <h3>Pop/Contemporary</h3>
+                <p>Many contemporary or pop songs translate well to the harp.</p>
+                <ul>
+                    <li>What a Wonderful World</li>
+                    <li>Over the Rainbow</li>
+                    <li>A River Flows in You / Bella’s Theme</li>
+                    <li>Memory (Cats)</li>
+                    <li>Moon River</li>
+                    <li>Unchained Melody</li>
+                </ul>
+            </div>
+        </div>
+ </div>
+</section>
+	    
 
 
 		<!-- Contact -->
