--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
         .category ul li {
             padding: 5px 0;
         }
+	.category p {
+             text-align: left;
+	    font-size:10px;
+        }
 </style>
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
