--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
 
 	        .categories {
             display: flex;
-            justify-content: center;
+            justify-content: left;
             gap: 20px;
             padding: 20px;
+	    font-size:16px;
         }
         .category {
             background: white;
@@ -127,9 +128,9 @@
         .category ul li {
             padding: 5px 0;
         }
-	.category p {
-             text-align: left;
-	    font-size:10px;
+	.zcategory p {
+            text-align: left;
+	    font-size:16px;
         }
 </style>
 		<!-- Work -->
