--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             gap: 20px;
             padding: 20px;
 	    font-size:16px;
+	    text-align: left;
         }
         .category {
             background: white;
@@ -122,7 +123,7 @@
             padding-bottom: 10px;
         }
         .category ul {
-            list-style: none;
+            list-style: square;
             padding: 0;
         }
         .category ul li {
