--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                 <h3>Celtic</h3>
                 <p>The harp is a traditional instrument of Ireland and Wales. Many beautiful songs have been written for the harp.</p>
                 <ul>
-                    <li>My Love is Like Red Red Rose</li>
-                    <li>Sally Gardens / The Maids of Morne Shore</li>
+                    <li>The Gael, Last of the Mohicans Theme</li>
+                    <li>Skye Boat</li>
                     <li>Eleanor Plunkett</li>
                     <li>Blind Mary</li>
                 </ul>
